[tool.poetry]
name = "asteroids"
version = "0.1.0"
description = ""
authors = ["vincentktieu101@gmail.com <vincentktieu101@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
